--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,19 +14,27 @@
 .header{
   width: 100%;
   height: 100vh;
-  background: url("Livello_1.png") center no-repeat;
-  background-size: cover;
+  background: url("Livello_1.png") center center/cover no-repeat;
 }
 
 .menu {
+  max-width: 758px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
 
+.menu_link{
+  padding-top: 73px;
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "Gotham Rounded";
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 
-/* .intro{
-  width: 100%;
-  height: 100vh;
-  background: url("Livello_1.png") center no-repeat;
-  background-size: cover;
-} */
+.menu_logo{
+  padding-top: 40px;
+}
